[gd_scene load_steps=17 format=4 uid="uid://djwj25g3yxu8i"]

[ext_resource type="PackedScene" uid="uid://byrom8vbjgcxo" path="res://Scenes/parallax_backgrounds.tscn" id="1_mgg0m"]
[ext_resource type="TileSet" uid="uid://bh52f06wo7gfn" path="res://Tilesets/hotel_walls2.tres" id="1_n4b4j"]
[ext_resource type="Texture2D" uid="uid://d1o6onyxgjk6n" path="res://Sprites/Misc/Área Externa/cone.png" id="2_mgg0m"]
[ext_resource type="Texture2D" uid="uid://u4srlvvfjxb5" path="res://Sprites/Misc/Área Externa/lixeira 01.png" id="3_rp1lj"]
[ext_resource type="Texture2D" uid="uid://crjocyehd3rl6" path="res://Sprites/Misc/Área Externa/lixeira 02.png" id="4_fs1sj"]
[ext_resource type="FontFile" uid="uid://cijpojywa2o1n" path="res://Fonts/Graffiti-Blok.otf" id="4_t14fh"]
[ext_resource type="Texture2D" uid="uid://cjye0fk0du4v5" path="res://Sprites/Misc/Móveis/sofá 02.png" id="5_t14fh"]
[ext_resource type="Texture2D" uid="uid://cj8ng0f8godfa" path="res://Sprites/Misc/Área Externa/lixo 01.png" id="6_fbr3m"]
[ext_resource type="Texture2D" uid="uid://05dsa302qmfh" path="res://Sprites/Misc/Área Externa/lixo 02.png" id="7_ea5fe"]
[ext_resource type="Texture2D" uid="uid://byj2gmlki22b6" path="res://Sprites/Misc/Área Externa/lixo 03.png" id="8_bo37b"]
[ext_resource type="Texture2D" uid="uid://b7bbjbbnbkptt" path="res://Sprites/Misc/Área Externa/lixeira 03.png" id="9_c7ao1"]
[ext_resource type="Script" uid="uid://ct2yyxdj2a8cy" path="res://Scripts/credits_menu.gd" id="11_rp1lj"]
[ext_resource type="Theme" uid="uid://7eltmng1er5f" path="res://UITheme/ButtonTheme.tres" id="12_smomg"]
[ext_resource type="Texture2D" uid="uid://d3sgf3m0rc3cm" path="res://Sprites/asset pack 03/janela B1.png" id="14_rp1lj"]
[ext_resource type="PackedScene" uid="uid://bljkigdqi5ipq" path="res://Scenes/Scenery/poste.tscn" id="15_fs1sj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fs1sj"]
size = Vector2(258, 78)

[node name="CreditsLevel" type="Node"]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="ParallaxBackgrounds" parent="." instance=ExtResource("1_mgg0m")]
position = Vector2(6, -18)

[node name="TileMaps" type="Node" parent="."]

[node name="TileMapLayer2" type="TileMapLayer" parent="TileMaps"]
tile_map_data = PackedByteArray("AAAHAAQAAQADAAsAAAAHAAUAAQADAAsAAAAHAAYAAQADAAwAAAAHAAcAAQADAA0AAAAFAAQAAQACAAsAAAAFAAUAAQABAAsAAAAFAAYAAQABAAwAAAAFAAcAAQABAA0AAAAGAAQAAQACAAsAAAAGAAUAAQACAAsAAAAGAAYAAQACAAwAAAAGAAcAAQACAA0AAAADAAQAAQACAAsAAAADAAUAAQABAAsAAAADAAYAAQABAAwAAAADAAcAAQABAA0AAAAEAAQAAQABAAsAAAAEAAUAAQACAAsAAAAEAAYAAQACAAwAAAAEAAcAAQACAA0AAAABAAQAAQABAAsAAAABAAUAAQACAAsAAAABAAYAAQACAAwAAAABAAcAAQACAA0AAAACAAQAAQABAAsAAAACAAUAAQACAAsAAAACAAYAAQACAAwAAAACAAcAAQACAA0AAAAAAAQAAQABAAsAAAAAAAUAAQABAAsAAAAAAAYAAQABAAwAAAAAAAcAAQABAA0AAAAEAAMAAQABAAoAAAAFAAMAAQACAAoAAAAGAAMAAQACAAoAAAAHAAMAAQADAAoAAAABAAMAAQABAAoAAAACAAMAAQABAAoAAAADAAMAAQACAAoAAAAAAAMAAQABAAoAAAANAAYAAQAAAAwAAAANAAcAAQAAAA0AAAANAAQAAQAAAAsAAAANAAUAAQAAAAwAAAANAAIAAQAAAAoAAAANAAMAAQAAAAwAAAAOAAAAAQABAAsAAAAOAAEAAQABAAwAAAANAAAAAQAAAAsAAAANAAEAAQAAAAwAAAANAP7/AQAAAAsAAAANAP//AQAAAAwAAAAPAAAAAQACAAsAAAAPAAEAAQACAAwAAAAQAAAAAQABAAwAAAAQAAEAAQABAAwAAAARAAAAAQACAAwAAAARAAEAAQACAAwAAAAQAAIAAQACAAoAAAAQAAMAAQACAAsAAAARAAIAAQABAAoAAAARAAMAAQABAAsAAAAQAAQAAQABAAsAAAAQAAUAAQABAAsAAAARAAQAAQACAAsAAAARAAUAAQACAAsAAAAOAAIAAQABAAoAAAAOAAMAAQABAAwAAAAPAAIAAQABAAoAAAAPAAMAAQABAAsAAAAOAAQAAQABAAsAAAAOAAUAAQABAAsAAAAPAAQAAQACAAsAAAAPAAUAAQACAAsAAAAOAAYAAQABAAwAAAAPAAYAAQACAAwAAAAQAAYAAQABAAwAAAARAAYAAQACAAwAAAASAAUAAQABAAsAAAASAAYAAQABAAwAAAATAAUAAQACAAsAAAATAAYAAQACAAwAAAASAAMAAQACAAsAAAASAAQAAQABAAwAAAATAAMAAQABAAsAAAATAAQAAQACAAwAAAAQAP//AQABAAsAAAASAAAAAQABAAwAAAASAAEAAQABAAwAAAATAAAAAQACAAwAAAATAAEAAQACAAwAAAASAP//AQABAAsAAAATAP//AQACAAsAAAASAAIAAQACAAoAAAATAAIAAQABAAoAAAAOAP7/AQABAAsAAAAOAP//AQABAAwAAAAPAP7/AQACAAsAAAAPAP//AQACAAwAAAAOAAcAAQABAA0AAAAPAAcAAQACAA0AAAAQAAcAAQABAA0AAAARAAcAAQACAA0AAAASAAcAAQABAA0AAAATAAcAAQACAA0AAAARAP//AQACAAsAAAAQAP7/AQABAAwAAAARAP7/AQACAAwAAAASAP7/AQABAAwAAAATAP7/AQACAAwAAAA=")
tile_set = ExtResource("1_n4b4j")
collision_enabled = false

[node name="TileMapLayer" type="TileMapLayer" parent="TileMaps"]
tile_map_data = PackedByteArray("AAAAAAoAAQALAAoAAAD//woAAQALAAoAAAAIAAgAAQAKAAkAAAAJAAgAAQAKAAkAAAALAAgAAQAKAAkAAAAMAAgAAQAKAAkAAAANAAgAAQAKAAkAAAAOAAgAAQAKAAkAAAAPAAgAAQAKAAkAAAAQAAgAAQAKAAkAAAARAAgAAQAKAAkAAAASAAgAAQAKAAkAAAATAAgAAQAKAAkAAAATAAkAAQALAAkAAAATAAoAAQALAAoAAAATAAsAAQALAAoAAAASAAsAAQALAAoAAAARAAsAAQALAAoAAAAQAAsAAQALAAoAAAAPAAsAAQALAAoAAAAOAAsAAQALAAoAAAANAAsAAQALAAoAAAAMAAsAAQALAAoAAAALAAsAAQALAAoAAAAKAAsAAQALAAoAAAAJAAsAAQALAAoAAAAIAAsAAQALAAoAAAAHAAsAAQALAAoAAAAGAAsAAQALAAoAAAABAAoAAQALAAoAAAACAAoAAQALAAoAAAADAAoAAQALAAoAAAAEAAoAAQALAAoAAAAFAAoAAQALAAoAAAAGAAoAAQALAAoAAAAHAAoAAQALAAoAAAAIAAoAAQALAAoAAAAJAAoAAQALAAoAAAAKAAoAAQALAAoAAAALAAoAAQALAAoAAAAMAAoAAQALAAoAAAANAAoAAQALAAoAAAAOAAoAAQALAAoAAAAPAAoAAQALAAoAAAAQAAoAAQALAAoAAAARAAoAAQALAAoAAAASAAoAAQALAAoAAAAUAAoAAQALAAoAAAAUAAgAAQAKAAkAAAAUAAkAAQALAAkAAAAUAAsAAQALAAoAAAASAAkAAQALAAkAAAARAAkAAQALAAkAAAAQAAkAAQALAAkAAAAPAAkAAQALAAkAAAAOAAkAAQALAAkAAAAMAAkAAQALAAkAAAALAAkAAQALAAkAAAAHAAkAAQALAAkAAAAGAAkAAQALAAkAAAAFAAkAAQALAAkAAAAEAAkAAQALAAkAAAD//wkAAQALAAkAAAAAAAkAAQALAAkAAAABAAkAAQALAAkAAAACAAkAAQALAAkAAAADAAkAAQALAAkAAAANAAkAAQALAAkAAAAVAAgAAQAKAAkAAAAVAAkAAQALAAkAAAAVAAoAAQALAAoAAAAVAAsAAQALAAoAAAAWAAgAAQAKAAkAAAAWAAkAAQALAAkAAAAWAAoAAQALAAoAAAAWAAsAAQALAAoAAAAXAAgAAQAKAAkAAAAXAAkAAQALAAkAAAAXAAoAAQALAAoAAAAXAAsAAQALAAoAAAAYAAgAAQAKAAkAAAAYAAkAAQALAAkAAAAYAAoAAQALAAoAAAAYAAsAAQALAAoAAAAZAAgAAQAKAAkAAAAZAAkAAQALAAkAAAAZAAoAAQALAAoAAAAZAAsAAQALAAoAAAAaAAgAAQAKAAkAAAAaAAkAAQALAAkAAAAaAAoAAQALAAoAAAAaAAsAAQALAAoAAAD9/wkAAQALAAkAAAD9/woAAQALAAoAAAD+/wkAAQALAAkAAAD+/woAAQALAAoAAAD6/wkAAQALAAkAAAD6/woAAQALAAoAAAD7/wkAAQALAAkAAAD7/woAAQALAAoAAAD8/wkAAQALAAkAAAD8/woAAQALAAoAAAD3/wkAAQALAAkAAAD3/woAAQALAAoAAAD4/wkAAQALAAkAAAD4/woAAQALAAoAAAD5/wkAAQALAAkAAAD5/woAAQALAAoAAAD6/wgAAQAKAAkAAAD7/wgAAQAKAAkAAAD8/wgAAQAKAAkAAAD9/wgAAQAKAAkAAAD+/wgAAQAKAAkAAAD//wgAAQAKAAkAAAAAAAgAAQAKAAkAAAABAAgAAQAKAAkAAAACAAgAAQAKAAkAAAADAAgAAQAKAAkAAAAEAAgAAQAKAAkAAAAFAAgAAQAKAAkAAAAGAAgAAQAKAAkAAAAHAAgAAQAKAAkAAAAKAAgAAQAKAAkAAAD3/wgAAQAKAAkAAAD4/wgAAQAKAAkAAAD5/wgAAQAKAAkAAAAbAAgAAQAKAAkAAAAcAAgAAQAKAAkAAAAcAAkAAQALAAkAAAAbAAkAAQALAAkAAAAKAAkAAQALAAkAAAAJAAkAAQALAAkAAAAIAAkAAQALAAkAAAABAAsAAQALAAoAAAACAAsAAQALAAoAAAADAAsAAQALAAoAAAAEAAsAAQALAAoAAAAFAAsAAQALAAoAAAAbAAoAAQALAAoAAAAcAAoAAQALAAoAAAAcAAsAAQALAAoAAAAbAAsAAQALAAoAAAAAAAsAAQALAAoAAAD//wsAAQALAAoAAAD+/wsAAQALAAoAAAD9/wsAAQALAAoAAAD8/wsAAQALAAoAAAD7/wsAAQALAAoAAAD6/wsAAQALAAoAAAD5/wsAAQALAAoAAAD4/wsAAQALAAoAAAD3/wsAAQALAAoAAAA=")
tile_set = ExtResource("1_n4b4j")

[node name="CreditsMenu" type="Control" parent="." node_paths=PackedStringArray("left_spawn", "right_spawn", "left_target", "right_target")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_rp1lj")
left_spawn = NodePath("../LeftSpawn")
right_spawn = NodePath("../RightSpawn")
left_target = NodePath("../LeftTarget")
right_target = NodePath("../RightTarget")

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -440.0
offset_right = 467.0
offset_bottom = -265.0
grow_vertical = 0
rotation = -0.0271586
theme_override_colors/default_color = Color(7.97166e-08, 0.120936, 0.0756656, 1)
theme_override_fonts/normal_font = ExtResource("4_t14fh")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "Jogo produzido por:

Bernardo F. Pereira (Programador + VFX)
Ingrid Miranda (Artista 2D)
Lauro Rosa (Artista + Animador 2D)
Igor Leal (Game + Level Designer)
"
horizontal_alignment = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="CreditsMenu"]
layout_mode = 1
offset_left = 1093.0
offset_top = 24.0
offset_right = 1282.0
offset_bottom = 115.0
rotation = 0.122765
theme_override_colors/default_color = Color(0.136594, 0.118441, 0.225987, 1)
theme_override_fonts/normal_font = ExtResource("4_t14fh")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "Músicas geradas usando Suno AI"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel3" type="RichTextLabel" parent="CreditsMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -124.0
offset_right = 639.0
offset_bottom = -4.0
grow_vertical = 0
theme_override_colors/default_color = Color(0.695503, 0.695503, 0.695503, 1)
theme_override_fonts/normal_font = ExtResource("4_t14fh")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Playtesters:
Márcio Rosendo, Victor Ricco Vracc
Sofia \"Moony\" Corrêa, João Pedro Sundfeld
Vinicius Zaniboni"

[node name="RichTextLabel2" type="RichTextLabel" parent="CreditsMenu"]
layout_mode = 2
offset_left = 873.0
offset_top = 192.0
offset_right = 1273.0
offset_bottom = 439.0
rotation = 0.0104391
theme_override_colors/default_color = Color(0.0985345, 0.0861971, 0.144795, 1)
theme_override_fonts/normal_font = ExtResource("4_t14fh")
theme_override_font_sizes/normal_font_size = 19
bbcode_enabled = true
text = "Audio utilizado:
Kenney RPG Sound Pack + UI Sound Pack
	kenney.nl/assets

Impact  e Punch de Iwan 'qubodup' Gabovitch
	opengameart.org/users/qubodup

Air Pump Short 2 de LHermanns
	freesound.org/s/417217/

Annulet of Absortion de CosmicD
	freesound.org/people/CosmicD/

High Traffic Road by IgnasD
	https://opengameart.org/content/high-traffic-road-sounds

Doorbell Tring by Dub
	opengameart.org/content/doorbell-ring

phone3.wav de rwm28
	freesound.org/s/48192/"

[node name="ButtonMainMenu" type="Button" parent="CreditsMenu"]
texture_filter = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -86.0
offset_right = -65.0
offset_bottom = -46.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("12_smomg")

[node name="Label" type="Label" parent="CreditsMenu/ButtonMainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -9.5
offset_right = 20.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
text = "Voltar"

[node name="Detail" type="Node" parent="."]

[node name="Cone" type="Sprite2D" parent="Detail"]
texture_filter = 3
position = Vector2(257, 492)
texture = ExtResource("2_mgg0m")

[node name="Cone2" type="Sprite2D" parent="Detail"]
texture_filter = 3
position = Vector2(274, 492)
texture = ExtResource("2_mgg0m")

[node name="Cone3" type="Sprite2D" parent="Detail"]
texture_filter = 3
position = Vector2(956, 492)
texture = ExtResource("2_mgg0m")

[node name="Lixeira01" type="Sprite2D" parent="Detail"]
texture_filter = 3
position = Vector2(62, 480)
texture = ExtResource("3_rp1lj")

[node name="Lixeira02" type="Sprite2D" parent="Detail"]
texture_filter = 3
position = Vector2(80, 479)
texture = ExtResource("4_fs1sj")

[node name="Sofá02" type="Sprite2D" parent="Detail"]
texture_filter = 3
position = Vector2(1135, 476)
texture = ExtResource("5_t14fh")

[node name="Lixo01" type="Sprite2D" parent="Detail"]
texture_filter = 3
position = Vector2(134, 496)
texture = ExtResource("6_fbr3m")

[node name="Lixo02" type="Sprite2D" parent="Detail"]
texture_filter = 3
position = Vector2(108, 492)
texture = ExtResource("7_ea5fe")

[node name="Lixo03" type="Sprite2D" parent="Detail"]
texture_filter = 3
position = Vector2(29, 488)
texture = ExtResource("8_bo37b")

[node name="Lixeira03" type="Sprite2D" parent="Detail"]
texture_filter = 3
position = Vector2(1233, 466)
texture = ExtResource("9_c7ao1")

[node name="Lixo04" type="Sprite2D" parent="Detail"]
texture_filter = 3
position = Vector2(1152, 488)
texture = ExtResource("8_bo37b")

[node name="JanelaB1" type="Sprite2D" parent="Detail"]
position = Vector2(958, -6)
texture = ExtResource("14_rp1lj")

[node name="JanelaB2" type="Sprite2D" parent="Detail"]
position = Vector2(1129, -6)
texture = ExtResource("14_rp1lj")

[node name="JanelaB3" type="Sprite2D" parent="Detail"]
position = Vector2(1289, -6)
texture = ExtResource("14_rp1lj")

[node name="Poste4" parent="Detail" instance=ExtResource("15_fs1sj")]
position = Vector2(1263, 387)
metadata/_edit_lock_ = true

[node name="Poste5" parent="Detail" instance=ExtResource("15_fs1sj")]
position = Vector2(665, 387)
metadata/_edit_lock_ = true

[node name="Poste6" parent="Detail" instance=ExtResource("15_fs1sj")]
position = Vector2(25, 387)
metadata/_edit_lock_ = true

[node name="Grunts" type="Node" parent="."]

[node name="RightSpawn" type="Marker2D" parent="."]
position = Vector2(1403, 454)

[node name="RightTarget" type="Marker2D" parent="."]
position = Vector2(1538, 454)

[node name="LeftSpawn" type="Marker2D" parent="."]
position = Vector2(-102, 454)

[node name="LeftTarget" type="Marker2D" parent="."]
position = Vector2(-267, 454)

[node name="DeathAreas" type="Node" parent="."]

[node name="LeftSide" type="Area2D" parent="DeathAreas"]
position = Vector2(-335, 465)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathAreas/LeftSide"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_fs1sj")

[node name="RightSide" type="Area2D" parent="DeathAreas"]
position = Vector2(1597, 465)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DeathAreas/RightSide"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_fs1sj")

[connection signal="timeout" from="Timer" to="CreditsMenu" method="_on_timer_timeout"]
[connection signal="button_down" from="CreditsMenu/ButtonMainMenu" to="CreditsMenu" method="_on_button_main_menu_button_down"]
[connection signal="pressed" from="CreditsMenu/ButtonMainMenu" to="CreditsMenu" method="_on_button_main_menu_pressed"]
[connection signal="body_entered" from="DeathAreas/LeftSide" to="CreditsMenu" method="_on_left_side_body_entered"]
[connection signal="body_entered" from="DeathAreas/RightSide" to="CreditsMenu" method="_on_screen_size_body_entered"]
